--- a/client/css/bulma.scss
+++ b/client/css/bulma.scss
@@ -26,6 +26,10 @@ $warning: #fdcb6e;
 $warning-light: hsl(39, 97%, 92%);
 $warning-invert: #0008;
 
+$danger: #e74c3c;
+$danger-light: hsl(6, 78%, 96%);
+$danger-invert: #fff;
+
 $menu-item-active-background-color: $primary;
 $menu-item-active-color: $primary-invert;
 
