--- a/client/css/scss/_fonts.scss
+++ b/client/css/scss/_fonts.scss
@@ -1,4 +1,10 @@
 @font-face {
+    font-family: "Pacifico";
+    src: url("../fonts/Pacifico-Regular.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
     font-family: "Montserrat";
     src: url("../fonts/Montserrat-Thin.ttf") format("truetype");
     font-weight: 100;
