--- a/client/css/scss/_layout.scss
+++ b/client/css/scss/_layout.scss
@@ -2,7 +2,43 @@
 @import '../../../node_modules/bulma/sass/helpers/color.sass';
 @import 'variables';
 
+.waves{
+    margin-bottom: -0.5rem;
+}
+.cmp-logo{
+    font-size: 2.5rem;
+    letter-spacing: .3ch;
+    font-weight: 400;
+    font-family: Pacifico;
+}
 .public-landing{
+    & .scroll-down-icon{
+        font-size: 3rem;
+        place-self: center;
+        animation: bounce 1.5s ease infinite;
+    }
+    & .cta-discover{
+        place-self: center;
+    }
+    & .signed-out-header {
+        height: 6rem;
+        align-items: end;
+        justify-content: center;
+        position: relative;
+        margin-bottom: 3rem;
+        & .button.sign-in{
+            position: absolute;
+            right: 2rem;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+        & .cmp-logo{
+            position: absolute;
+            left: 2rem;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+    }
     & .pricing-section{
         & .pricing-table{
             display: flex;
@@ -12,26 +48,25 @@
         }
     }
     & .section-wrapper{
-        min-height: 100vh;
+        min-height: 50vh;
         width: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
-        &:nth-child(even){
-            background-color: hsl(0deg,0%,92%);
-        }
         & > .section {
+            padding: 0 3rem;
             align-content: center;
             display: grid;
-            max-width: 75rem;
+            max-width: 72rem;
             width: 100%;
         }
     }
     & .illustration-section .section{
         margin: auto;
         display: grid;
-        gap: 4rem;
-        grid-template-columns: 1fr 1fr;
+        gap: 3rem;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
         & .half{
             display: flex;
             flex-direction: column;
@@ -48,15 +83,31 @@
         }
         & .illustration-half{
             & .illustration{
-
+                max-height: 28rem;
             }
         }
     }
 }
 
+
+@media screen and (min-width : 56rem) {
+    .public-landing .illustration-section .section{
+            grid-template-rows: 1fr;
+            grid-template-columns: 1fr 1fr;
+        }
+}
+
+.back-to-home{
+    position: absolute;
+    bottom: 2rem;
+    left: 50%;
+    transform: translateX(-50%);
+}
 .landing-container{
+    position: relative;
     width: 100vw;
     max-width: 64rem;
+    gap: 4rem;
     padding: 1rem;
     margin: auto;
     height: 100vh;
@@ -422,4 +473,9 @@
             }
         }
     }
+}
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+    40% {transform: translateY(2rem);}
+    60% {transform: translateY(1rem);}
 }
