--- a/client/css/scss/_variables.scss
+++ b/client/css/scss/_variables.scss
@@ -104,16 +104,15 @@ $full-black:#000;
 $navbar-arrow-one:#0002;
 $navbar-arrow-two:#0006;
 
-$bg-color: hsl(42, 45%, 96%);
+// $bg-color: hsl(42, 45%, 96%);
+
+$bg-color: hsl(0, 100%, 100%);
 
 // $carlfrom :#09C6F9;
 // $carlto : #045DE9;
 
 $carlfrom :#09C6F9;
 $carlto : #045DE9;
-
-
-$primary: #74b9ff;
 
 //$gradient-theme-bg: linear-gradient(315deg, #e9eaf7 0%, #f6f0ea 74%); // PICK WHITE TO LIGHT BLEU
 //$gradient-theme-bg: linear-gradient(315deg, #f1dfd1 0%, #f6f0ea 74%); // PEACH TO WHITE
