Changed logo color

--- a/client/css/scss/_variables.scss
+++ b/client/css/scss/_variables.scss
@@ -111,8 +111,8 @@ $bg-color: hsl(0, 100%, 100%);
 // $carlfrom :#09C6F9;
 // $carlto : #045DE9;
 
-$carlfrom :#09C6F9;
-$carlto : #045DE9;
+$carlfrom :#f1c40f;
+$carlto : #f39c12;
 
 //$gradient-theme-bg: linear-gradient(315deg, #e9eaf7 0%, #f6f0ea 74%); // PICK WHITE TO LIGHT BLEU
 //$gradient-theme-bg: linear-gradient(315deg, #f1dfd1 0%, #f6f0ea 74%); // PEACH TO WHITE
