--- a/client/css/bulma.scss
+++ b/client/css/bulma.scss
@@ -2,7 +2,7 @@ $dropdown-content-background-color : hsl(0deg,0%,95%);
 $dropdown-item-hover-background-color : hsl(0deg,0%,100%);
 
 $table-striped-row-even-background-color : hsl(225,100%,96%);
-$table-row-hover-background-color : hsl(230,100%,95%);
+$table-row-hover-background-color : hsl(37, 90%, 96%);
 $table-striped-row-even-hover-background-color : hsl(230,100%,95%);
 
 $black: hsl(210, 29%, 4%);
