--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -21,7 +21,7 @@
   left: 0;
   right: 0;
   box-shadow: inset 0 0 0.5rem 0.5rem rgba(0, 0, 0, 0.3333333333), 0.75rem -0.75rem 1.5rem #ffffff;
-  background: linear-gradient(0deg, #09C6F9, #045DE9);
+  background: linear-gradient(0deg, #f1c40f, #f39c12);
   animation: rotate-gradient linear 2s infinite;
 }
 .carl-wrapper .ring-outter .ring-inner {
@@ -1663,6 +1663,11 @@ input.checkbox {
   position: fixed;
   background-color: hsl(0deg, 100%, 100%);
 }
+.navbar .cmp-logo {
+  font-size: 2rem;
+  letter-spacing: 0.1ch;
+  color: #34495e;
+}
 .navbar hr {
   text-align: center;
   background-color: #2c3e50;
@@ -1708,6 +1713,12 @@ input.checkbox {
   text-decoration: none;
   text-transform: uppercase;
   align-items: center;
+}
+.navbar .navbar-nav .logo .nav-link .fa-duotone::before {
+  color: hsl(37deg, 90%, 64%);
+}
+.navbar .navbar-nav .logo .nav-link .fa-duotone::after {
+  color: hsl(37deg, 90%, 64%);
 }
 .navbar .navbar-nav .logo .nav-link .link-text {
   text-align: center;
@@ -1782,10 +1793,6 @@ input.checkbox {
 }
 .navbar:not(.expanded) .nav-collapse {
   display: none;
-}
-.navbar .logo .nav-link-logo .link-text {
-  color: #34495e;
-  letter-spacing: 0.2ch;
 }
 .navbar .logo .nav-link-logo i {
   height: 2rem;
