--- a/client/css/scss/_navbar.scss
+++ b/client/css/scss/_navbar.scss
@@ -1,6 +1,11 @@
 @import 'variables';
 
 .navbar{
+  & .cmp-logo {
+    font-size: 2rem;
+    letter-spacing: .1ch;
+    color: $text;
+  }
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -50,6 +55,14 @@
         text-decoration: none;
         text-transform: uppercase;
         align-items: center;
+        & .fa-duotone{
+          &::before{
+            color:hsl(37, 90%, 64%);
+          }
+          &::after{
+            color:hsl(37, 90%, 64%);
+          }
+        }
         & .link-text{
           text-align: center;
           display: none;
@@ -132,10 +145,6 @@
     }
   }
   & .logo .nav-link-logo {
-    & .link-text{
-      color:$text;
-      letter-spacing: .2ch;
-    }
     & i{
       height: 2rem;
     }
