--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -206,87 +206,87 @@
   font-style: italic;
 }
 .has-text-white {
-  color: hsl(0deg, 0%, 100%) !important;
+  color: hsl(210deg, 29%, 100%) !important;
 }
 
 a.has-text-white:hover, a.has-text-white:focus {
-  color: #e6e6e6 !important;
+  color: #dee6ed !important;
 }
 
 .has-background-white {
-  background-color: hsl(0deg, 0%, 100%) !important;
+  background-color: hsl(210deg, 29%, 100%) !important;
 }
 
 .has-text-black {
-  color: #1b1c1d !important;
+  color: hsl(210deg, 29%, 4%) !important;
 }
 
 a.has-text-black:hover, a.has-text-black:focus {
-  color: #020303 !important;
+  color: black !important;
 }
 
 .has-background-black {
-  background-color: #1b1c1d !important;
+  background-color: hsl(210deg, 29%, 4%) !important;
 }
 
 .has-text-light {
-  color: hsl(0deg, 0%, 96%) !important;
+  color: hsl(210deg, 29%, 96%) !important;
 }
 
 a.has-text-light:hover, a.has-text-light:focus {
-  color: #dbdbdb !important;
+  color: #d1dbe6 !important;
 }
 
 .has-background-light {
-  background-color: hsl(0deg, 0%, 96%) !important;
+  background-color: hsl(210deg, 29%, 96%) !important;
 }
 
 .has-text-dark {
-  color: hsl(0deg, 0%, 21%) !important;
+  color: hsl(210deg, 29%, 21%) !important;
 }
 
 a.has-text-dark:hover, a.has-text-dark:focus {
-  color: #1c1c1c !important;
+  color: #141c24 !important;
 }
 
 .has-background-dark {
-  background-color: hsl(0deg, 0%, 21%) !important;
+  background-color: hsl(210deg, 29%, 21%) !important;
 }
 
 .has-text-primary {
-  color: hsl(171deg, 100%, 41%) !important;
+  color: hsl(37deg, 90%, 64%) !important;
 }
 
 a.has-text-primary:hover, a.has-text-primary:focus {
-  color: #009e86 !important;
+  color: #f3a220 !important;
 }
 
 .has-background-primary {
-  background-color: hsl(171deg, 100%, 41%) !important;
+  background-color: hsl(37deg, 90%, 64%) !important;
 }
 
 .has-text-primary-light {
-  color: #ebfffc !important;
+  color: hsl(37deg, 90%, 96%) !important;
 }
 
 a.has-text-primary-light:hover, a.has-text-primary-light:focus {
-  color: #b8fff4 !important;
+  color: #fbe3bb !important;
 }
 
 .has-background-primary-light {
-  background-color: #ebfffc !important;
+  background-color: hsl(37deg, 90%, 96%) !important;
 }
 
 .has-text-primary-dark {
-  color: #00947e !important;
+  color: #8d5907 !important;
 }
 
 a.has-text-primary-dark:hover, a.has-text-primary-dark:focus {
-  color: #00c7a9 !important;
+  color: #bd780a !important;
 }
 
 .has-background-primary-dark {
-  background-color: #00947e !important;
+  background-color: #8d5907 !important;
 }
 
 .has-text-link {
@@ -398,153 +398,149 @@ a.has-text-success-dark:hover, a.has-text-success-dark:focus {
 }
 
 .has-text-warning {
-  color: hsl(44deg, 100%, 77%) !important;
+  color: #fdcb6e !important;
 }
 
 a.has-text-warning:hover, a.has-text-warning:focus {
-  color: #ffd257 !important;
+  color: #fcb93c !important;
 }
 
 .has-background-warning {
-  background-color: hsl(44deg, 100%, 77%) !important;
+  background-color: #fdcb6e !important;
 }
 
 .has-text-warning-light {
-  color: #fffaeb !important;
+  color: hsl(39deg, 97%, 92%) !important;
 }
 
 a.has-text-warning-light:hover, a.has-text-warning-light:focus {
-  color: #ffecb8 !important;
+  color: #fedea5 !important;
 }
 
 .has-background-warning-light {
-  background-color: #fffaeb !important;
+  background-color: hsl(39deg, 97%, 92%) !important;
 }
 
 .has-text-warning-dark {
-  color: #946c00 !important;
+  color: #926002 !important;
 }
 
 a.has-text-warning-dark:hover, a.has-text-warning-dark:focus {
-  color: #c79200 !important;
+  color: #c48103 !important;
 }
 
 .has-background-warning-dark {
-  background-color: #946c00 !important;
+  background-color: #926002 !important;
 }
 
 .has-text-danger {
-  color: hsl(348deg, 86%, 61%) !important;
+  color: #e74c3c !important;
 }
 
 a.has-text-danger:hover, a.has-text-danger:focus {
-  color: #ee1742 !important;
+  color: #d62c1a !important;
 }
 
 .has-background-danger {
-  background-color: hsl(348deg, 86%, 61%) !important;
+  background-color: #e74c3c !important;
 }
 
 .has-text-danger-light {
-  color: #feecf0 !important;
+  color: hsl(6deg, 78%, 96%) !important;
 }
 
 a.has-text-danger-light:hover, a.has-text-danger-light:focus {
-  color: #fabdc9 !important;
+  color: #f7c5bf !important;
 }
 
 .has-background-danger-light {
-  background-color: #feecf0 !important;
+  background-color: hsl(6deg, 78%, 96%) !important;
 }
 
 .has-text-danger-dark {
-  color: #cc0f35 !important;
+  color: #c32818 !important;
 }
 
 a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
-  color: #ee2049 !important;
+  color: #e53b2a !important;
 }
 
 .has-background-danger-dark {
-  background-color: #cc0f35 !important;
+  background-color: #c32818 !important;
 }
 
 .has-text-black-bis {
-  color: hsl(0deg, 0%, 7%) !important;
+  color: hsl(210deg, 29%, 7%) !important;
 }
 
 .has-background-black-bis {
-  background-color: hsl(0deg, 0%, 7%) !important;
+  background-color: hsl(210deg, 29%, 7%) !important;
 }
 
 .has-text-black-ter {
-  color: hsl(0deg, 0%, 14%) !important;
+  color: hsl(210deg, 29%, 14%) !important;
 }
 
 .has-background-black-ter {
-  background-color: hsl(0deg, 0%, 14%) !important;
+  background-color: hsl(210deg, 29%, 14%) !important;
 }
 
 .has-text-grey-darker {
-  color: hsl(0deg, 0%, 21%) !important;
+  color: hsl(210deg, 29%, 21%) !important;
 }
 
 .has-background-grey-darker {
-  background-color: hsl(0deg, 0%, 21%) !important;
+  background-color: hsl(210deg, 29%, 21%) !important;
 }
 
 .has-text-grey-dark {
-  color: hsl(0deg, 0%, 29%) !important;
+  color: hsl(210deg, 29%, 29%) !important;
 }
 
 .has-background-grey-dark {
-  background-color: hsl(0deg, 0%, 29%) !important;
+  background-color: hsl(210deg, 29%, 29%) !important;
 }
 
 .has-text-grey {
-  color: hsl(0deg, 0%, 48%) !important;
+  color: hsl(210deg, 29%, 48%) !important;
 }
 
 .has-background-grey {
-  background-color: hsl(0deg, 0%, 48%) !important;
+  background-color: hsl(210deg, 29%, 48%) !important;
 }
 
 .has-text-grey-light {
-  color: hsl(0deg, 0%, 71%) !important;
+  color: hsl(210deg, 29%, 71%) !important;
 }
 
 .has-background-grey-light {
-  background-color: hsl(0deg, 0%, 71%) !important;
+  background-color: hsl(210deg, 29%, 71%) !important;
 }
 
 .has-text-grey-lighter {
-  color: hsl(0deg, 0%, 86%) !important;
+  color: hsl(210deg, 29%, 86%) !important;
 }
 
 .has-background-grey-lighter {
-  background-color: hsl(0deg, 0%, 86%) !important;
+  background-color: hsl(210deg, 29%, 86%) !important;
 }
 
 .has-text-white-ter {
-  color: hsl(0deg, 0%, 96%) !important;
+  color: hsl(210deg, 29%, 96%) !important;
 }
 
 .has-background-white-ter {
-  background-color: hsl(0deg, 0%, 96%) !important;
+  background-color: hsl(210deg, 29%, 96%) !important;
 }
 
 .has-text-white-bis {
-  color: hsl(0deg, 0%, 98%) !important;
+  color: hsl(210deg, 29%, 98%) !important;
 }
 
 .has-background-white-bis {
-  background-color: hsl(0deg, 0%, 98%) !important;
+  background-color: hsl(210deg, 29%, 98%) !important;
 }
 
-/*COLORS FROM FLAT UI COLOR PALETTE 1*/
-/*COLORS FROM SEMANTIC UI REACT BUTTONS*/
-/*3 COLORS THEME*/
-/*SELECTED COLORS*/
 .waves {
   margin-bottom: -0.5rem;
 }
@@ -886,7 +882,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .structure-row-wrapper {
   border-radius: 0.25rem;
   padding: 1rem 2rem 1rem 1rem;
-  border-left: 0.4rem solid hsl(171deg, 100%, 41%);
+  border-left: 0.4rem solid hsl(37deg, 90%, 64%);
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto auto;
@@ -1285,7 +1281,7 @@ ul, li {
 .text-light .title,
 .text-light .fa,
 .text-light .box {
-  color: hsl(0deg, 0%, 93%) !important;
+  color: hsl(210deg, 29%, 93%) !important;
 }
 
 .button {
@@ -1839,7 +1835,7 @@ input.checkbox {
 }
 
 .fa.grey {
-  color: hsl(0deg, 0%, 48%);
+  color: hsl(210deg, 29%, 48%);
 }
 
 .fa.brown {
