--- a/client/css/scss/_colors.scss
+++ b/client/css/scss/_colors.scss
@@ -18,6 +18,8 @@ $white-ter: hsl(210, 29%, 96%);
 $white-bis: hsl(210, 29%, 98%);
 $white: hsl(210, 29%, 100%);
 
+//#e74c3c
+
 $primary:hsl(37, 90%, 64%);
 $primary-light:	hsl(37, 90%, 96%);
 $primary-invert: #fff;
