--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -205,13 +205,16 @@
   font-weight: 900;
   font-style: italic;
 }
-.lab .button.is-round {
+.lab .button.collapse-control {
   border-radius: 50%;
   aspect-ratio: 1;
   height: 2rem;
   width: 2rem;
   position: absolute;
+  z-index: 10;
   margin: 0;
+  padding: 0;
+  top: 1rem;
 }
 .lab .leftShelf .collapse-control {
   transform: translateX(50%);
@@ -234,7 +237,7 @@
   width: 2rem;
 }
 .lab .shelf {
-  padding: 1rem;
+  gap: 1rem;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -243,6 +246,9 @@
   display: flex;
   flex-direction: column;
   align-content: center;
+}
+.lab .shelf > * {
+  padding: 0 2rem;
 }
 .lab .shelf > *:not(.collapse-control) {
   visibility: collapse;
@@ -256,14 +262,14 @@
   text-transform: uppercase;
   letter-spacing: 0.3ch;
   margin: 1rem 0;
-  padding: 0 1rem;
+  padding: 0.5rem 1.5rem;
   font-size: 0.75rem;
   font-weight: bold;
-  border-bottom: 1px solid #555;
 }
 .lab .shelf div.shelf-section {
   display: flex;
   flex-direction: column;
+  background: rgba(0, 0, 0, 0.0666666667);
   padding: 0.5rem;
   gap: 0.5rem;
 }
