--- a/client/css/scss/_lab.scss
+++ b/client/css/scss/_lab.scss
@@ -1,4 +1,7 @@
 .lab{
+    & .grabbable{
+        cursor: grab;
+    }
     & .button.collapse-control{
         border-radius: 50%;
         aspect-ratio: 1;
@@ -9,6 +12,12 @@
         margin: 0;
         padding: 0;
         top: 1rem;
+    }
+    & .button.add-tab{
+        border-radius: 50%;
+        aspect-ratio: 1;
+        height: 2rem;
+        width: 2rem;
     }
     & .leftShelf .collapse-control{
         transform: translateX(50%);
@@ -23,10 +32,8 @@
     &.rightExpanded .rightShelf{width : 12rem}
     &.rightCollapsed .rightShelf{width : 2rem;}
     & .shelf{
-        & > * {
-            padding: 0 2rem;
-        }
         gap: 1rem;
+        padding-bottom: 1rem;
         position: absolute;
         top: 0;
         bottom: 0;
@@ -41,7 +48,6 @@
         &.expanded > *:not(.collapse-control) {
             visibility: visible;
             animation: .2s linear expandContent forwards;
-            color: #444;
         }
         & h3.shelf-title{
             text-transform: uppercase;
@@ -58,19 +64,68 @@
             padding: .5rem;
             gap: .5rem;
             & h4.shelf-section-title{
+                text-transform: uppercase;
+                letter-spacing: .3ch;
+                font-size: .75rem;
+                font-weight: bold;
             }
         }
     }
-    & .leftShelf{left: 0;}
+    & .leftShelf{
+        left: 0;
+        & .shelf-title{
+            text-align: end;
+        }
+        & .available-data {
+            display: flex;
+            flex-direction: column;
+            flex-grow: 1;
+            gap: 1rem;
+        }
+        .back-button{
+            margin: 0 1rem;
+        }
+    }
     & .rightShelf{right: 0;}
-    & .labBody{
+    & .lab-body{
+        &.subtabs .lab-content {
+            grid-column-start: 2;
+        }
+        &.notabs .lab-content {
+            grid-column-end: span 2;
+        }
+        & .subtabsbox{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: .5rem;
+            align-self:self-start;
+        }
+        display: grid;
+        grid-template-columns: auto 1fr;
+        grid-template-rows: 1fr;
+        gap:.5rem;
         padding: 2rem;
         transition: padding .5s ease-in-out;
+        min-height: 100vh;
+        place-content: stretch;
+        & .lab-content{
+            display: grid;
+            &.empty{
+                background: #00226616;
+                border: .25rem dashed #0004;
+                border-radius: 1rem;
+                display: flex;
+                padding: 2rem;
+                justify-content: center;
+                align-items: center;
+            }
+        }
     }
-    &.leftExpanded .labBody{padding-left : 15rem}
-    &.leftCollapsed .labBody{padding-left : 6rem}
-    &.rightExpanded .labBody{padding-right : 15rem}
-    &.rightCollapsed .labBody{padding-right : 6rem}
+    &.leftExpanded .lab-body{padding-left : 13.5rem}
+    &.leftCollapsed .lab-body{padding-left : 6rem}
+    &.rightExpanded .lab-body{padding-right : 13.5rem}
+    &.rightCollapsed .lab-body{padding-right : 6rem}
 }
 
 @keyframes expandContent {
